include/assemblydb.h

typedef struct adb_t adb_t;
/* Configuration */
typedef struct {
    uint32_t cache_size_pages;
    uint8_t  encryption_enabled;
    uint8_t  compression_enabled;
    uint8_t  wal_sync_mode;
    uint8_t  _pad;
    uint32_t memtable_max_bytes;
} adb_config_t;
/* Batch entry */
typedef struct {
    const void *key;
    uint16_t    key_len;
    const void *val;
    uint16_t    val_len;
} adb_batch_entry_t;
/* Scan callback: return 0 to continue, non-zero to stop */
typedef int (*adb_scan_fn)(const void *key, uint16_t key_len,
                           const void *val, uint16_t val_len,
                           void *user_data);
/* Index key extractor: extract secondary key from primary value */
typedef int (*adb_index_fn)(const void *val, uint16_t val_len,
                            void *index_key_buf, uint16_t *index_key_len);
/* ============================================================
 * Lifecycle
 * ============================================================ */
int adb_open(const char *path, const adb_config_t *config, adb_t **db_out);
int adb_close(adb_t *db);
int adb_sync(adb_t *db);
int adb_destroy(const char *path);
/* ============================================================
 * Key-Value Operations (implicit auto-commit transaction)
 * ============================================================ */
int adb_put(adb_t *db,
            const void *key, uint16_t key_len,
            const void *val, uint16_t val_len);
int adb_get(adb_t *db,
            const void *key, uint16_t key_len,
            void *val_buf, uint16_t val_buf_len,
            uint16_t *val_len_out);
int adb_delete(adb_t *db,
               const void *key, uint16_t key_len);
/* ============================================================
 * Range Scan
 * ============================================================ */
int adb_scan(adb_t *db,
             const void *start_key, uint16_t start_key_len,
             const void *end_key, uint16_t end_key_len,
             adb_scan_fn callback, void *user_data);
/* ============================================================
 * Batch Operations
 * ============================================================ */
int adb_batch_put(adb_t *db,
                  const adb_batch_entry_t *entries,
                  uint32_t count);
/* ============================================================
 * Explicit Transactions
 * ============================================================ */
int adb_tx_begin(adb_t *db, uint8_t isolation, uint64_t *tx_id_out);
int adb_tx_put(adb_t *db, uint64_t tx_id,
               const void *key, uint16_t key_len,
               const void *val, uint16_t val_len);
int adb_tx_get(adb_t *db, uint64_t tx_id,
               const void *key, uint16_t key_len,
               void *val_buf, uint16_t val_buf_len,
               uint16_t *val_len_out);
int adb_tx_delete(adb_t *db, uint64_t tx_id,
                  const void *key, uint16_t key_len);
int adb_tx_commit(adb_t *db, uint64_t tx_id);
int adb_tx_rollback(adb_t *db, uint64_t tx_id);
int adb_tx_scan(adb_t *db, uint64_t tx_id,
                const void *start_key, uint16_t start_key_len,
                const void *end_key, uint16_t end_key_len,
                adb_scan_fn callback, void *user_data);
/* ============================================================
 * Secondary Indexes
 * ============================================================ */
int adb_create_index(adb_t *db, const char *name, adb_index_fn extract_key);
int adb_drop_index(adb_t *db, const char *name);
int adb_index_scan(adb_t *db, const char *index_name,
                   const void *key, uint16_t key_len,
                   adb_scan_fn callback, void *user_data);