flutter/lib/src/bindings/assemblydb_bindings.g.dart

// ignore_for_file: type=lint
// AUTO GENERATED by ffigen — do not edit

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for AssemblyDB
class AssemblyDBBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AssemblyDBBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AssemblyDBBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int adb_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<adb_config_t> config,
    ffi.Pointer<ffi.Pointer<adb_t>> db_out,
  ) {
    return _adb_open(
      path,
      config,
      db_out,
    );
  }

  late final _adb_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<adb_config_t>,
              ffi.Pointer<ffi.Pointer<adb_t>>)>>('adb_open');
  late final _adb_open = _adb_openPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<adb_config_t>,
          ffi.Pointer<ffi.Pointer<adb_t>>)>();

  int adb_close(
    ffi.Pointer<adb_t> db,
  ) {
    return _adb_close(
      db,
    );
  }

  late final _adb_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<adb_t>)>>(
          'adb_close');
  late final _adb_close =
      _adb_closePtr.asFunction<int Function(ffi.Pointer<adb_t>)>();

  int adb_sync(
    ffi.Pointer<adb_t> db,
  ) {
    return _adb_sync(
      db,
    );
  }

  late final _adb_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<adb_t>)>>(
          'adb_sync');
  late final _adb_sync =
      _adb_syncPtr.asFunction<int Function(ffi.Pointer<adb_t>)>();

  int adb_destroy(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _adb_destroy(
      path,
    );
  }

  late final _adb_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'adb_destroy');
  late final _adb_destroy =
      _adb_destroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int adb_put(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Void> key,
    int key_len,
    ffi.Pointer<ffi.Void> val,
    int val_len,
  ) {
    return _adb_put(
      db,
      key,
      key_len,
      val,
      val_len,
    );
  }

  late final _adb_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>,
              ffi.Uint16, ffi.Pointer<ffi.Void>, ffi.Uint16)>>('adb_put');
  late final _adb_put = _adb_putPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int)>();

  int adb_get(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Void> key,
    int key_len,
    ffi.Pointer<ffi.Void> val_buf,
    int val_buf_len,
    ffi.Pointer<ffi.Uint16> val_len_out,
  ) {
    return _adb_get(
      db,
      key,
      key_len,
      val_buf,
      val_buf_len,
      val_len_out,
    );
  }

  late final _adb_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Uint16>)>>('adb_get');
  late final _adb_get = _adb_getPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Uint16>)>();

  int adb_delete(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Void> key,
    int key_len,
  ) {
    return _adb_delete(
      db,
      key,
      key_len,
    );
  }

  late final _adb_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>,
              ffi.Uint16)>>('adb_delete');
  late final _adb_delete = _adb_deletePtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>, int)>();

  int adb_scan(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Void> start_key,
    int start_key_len,
    ffi.Pointer<ffi.Void> end_key,
    int end_key_len,
    adb_scan_fn callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _adb_scan(
      db,
      start_key,
      start_key_len,
      end_key,
      end_key_len,
      callback,
      user_data,
    );
  }

  late final _adb_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              adb_scan_fn,
              ffi.Pointer<ffi.Void>)>>('adb_scan');
  late final _adb_scan = _adb_scanPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, adb_scan_fn, ffi.Pointer<ffi.Void>)>();

  int adb_batch_put(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<adb_batch_entry_t> entries,
    int count,
  ) {
    return _adb_batch_put(
      db,
      entries,
      count,
    );
  }

  late final _adb_batch_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Pointer<adb_batch_entry_t>,
              ffi.Uint32)>>('adb_batch_put');
  late final _adb_batch_put = _adb_batch_putPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<adb_batch_entry_t>, int)>();

  int adb_tx_begin(
    ffi.Pointer<adb_t> db,
    int isolation,
    ffi.Pointer<ffi.Uint64> tx_id_out,
  ) {
    return _adb_tx_begin(
      db,
      isolation,
      tx_id_out,
    );
  }

  late final _adb_tx_beginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Uint8,
              ffi.Pointer<ffi.Uint64>)>>('adb_tx_begin');
  late final _adb_tx_begin = _adb_tx_beginPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, int, ffi.Pointer<ffi.Uint64>)>();

  int adb_tx_put(
    ffi.Pointer<adb_t> db,
    int tx_id,
    ffi.Pointer<ffi.Void> key,
    int key_len,
    ffi.Pointer<ffi.Void> val,
    int val_len,
  ) {
    return _adb_tx_put(
      db,
      tx_id,
      key,
      key_len,
      val,
      val_len,
    );
  }

  late final _adb_tx_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Uint64,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16)>>('adb_tx_put');
  late final _adb_tx_put = _adb_tx_putPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, int, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int)>();

  int adb_tx_get(
    ffi.Pointer<adb_t> db,
    int tx_id,
    ffi.Pointer<ffi.Void> key,
    int key_len,
    ffi.Pointer<ffi.Void> val_buf,
    int val_buf_len,
    ffi.Pointer<ffi.Uint16> val_len_out,
  ) {
    return _adb_tx_get(
      db,
      tx_id,
      key,
      key_len,
      val_buf,
      val_buf_len,
      val_len_out,
    );
  }

  late final _adb_tx_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Uint64,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Uint16>)>>('adb_tx_get');
  late final _adb_tx_get = _adb_tx_getPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, int, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Uint16>)>();

  int adb_tx_delete(
    ffi.Pointer<adb_t> db,
    int tx_id,
    ffi.Pointer<ffi.Void> key,
    int key_len,
  ) {
    return _adb_tx_delete(
      db,
      tx_id,
      key,
      key_len,
    );
  }

  late final _adb_tx_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Uint64,
              ffi.Pointer<ffi.Void>, ffi.Uint16)>>('adb_tx_delete');
  late final _adb_tx_delete = _adb_tx_deletePtr.asFunction<
      int Function(ffi.Pointer<adb_t>, int, ffi.Pointer<ffi.Void>, int)>();

  int adb_tx_commit(
    ffi.Pointer<adb_t> db,
    int tx_id,
  ) {
    return _adb_tx_commit(
      db,
      tx_id,
    );
  }

  late final _adb_tx_commitPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<adb_t>, ffi.Uint64)>>(
      'adb_tx_commit');
  late final _adb_tx_commit =
      _adb_tx_commitPtr.asFunction<int Function(ffi.Pointer<adb_t>, int)>();

  int adb_tx_rollback(
    ffi.Pointer<adb_t> db,
    int tx_id,
  ) {
    return _adb_tx_rollback(
      db,
      tx_id,
    );
  }

  late final _adb_tx_rollbackPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<adb_t>, ffi.Uint64)>>(
      'adb_tx_rollback');
  late final _adb_tx_rollback =
      _adb_tx_rollbackPtr.asFunction<int Function(ffi.Pointer<adb_t>, int)>();

  int adb_tx_scan(
    ffi.Pointer<adb_t> db,
    int tx_id,
    ffi.Pointer<ffi.Void> start_key,
    int start_key_len,
    ffi.Pointer<ffi.Void> end_key,
    int end_key_len,
    adb_scan_fn callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _adb_tx_scan(
      db,
      tx_id,
      start_key,
      start_key_len,
      end_key,
      end_key_len,
      callback,
      user_data,
    );
  }

  late final _adb_tx_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Uint64,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              adb_scan_fn,
              ffi.Pointer<ffi.Void>)>>('adb_tx_scan');
  late final _adb_tx_scan = _adb_tx_scanPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, int, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, adb_scan_fn, ffi.Pointer<ffi.Void>)>();

  int adb_create_index(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Char> name,
    adb_index_fn extract_key,
  ) {
    return _adb_create_index(
      db,
      name,
      extract_key,
    );
  }

  late final _adb_create_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>,
              adb_index_fn)>>('adb_create_index');
  late final _adb_create_index = _adb_create_indexPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>, adb_index_fn)>();

  int adb_drop_index(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _adb_drop_index(
      db,
      name,
    );
  }

  late final _adb_drop_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>)>>('adb_drop_index');
  late final _adb_drop_index = _adb_drop_indexPtr
      .asFunction<int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>)>();

  int adb_index_scan(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Char> index_name,
    ffi.Pointer<ffi.Void> key,
    int key_len,
    adb_scan_fn callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _adb_index_scan(
      db,
      index_name,
      key,
      key_len,
      callback,
      user_data,
    );
  }

  late final _adb_index_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<adb_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>,
              ffi.Uint16,
              adb_scan_fn,
              ffi.Pointer<ffi.Void>)>>('adb_index_scan');
  late final _adb_index_scan = _adb_index_scanPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Void>, int, adb_scan_fn, ffi.Pointer<ffi.Void>)>();
